--- a/.github/workflows/license_review.yml
+++ b/.github/workflows/license_review.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.6
       - name: Install license finder
