--- a/.github/workflows/license_review.yml
+++ b/.github/workflows/license_review.yml
@@ -18,5 +18,4 @@ jobs:
         run: gem install license_finder
       - name: Run license finder
         run: license_finder
-        with:
-          path: ./tools/license-finder
+        working-directory: ./tools/license-finder
