--- a/.github/workflows/license_review.yml
+++ b/.github/workflows/license_review.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   license-check:
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./tools/license-finder
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
@@ -18,4 +20,4 @@ jobs:
         run: gem install license_finder
       - name: Run license finder
         run: license_finder
-        working-directory: ./tools/license-finder
+        working-directory: ${{env.working-directory}}
