--- a/.github/workflows/license_review.yml
+++ b/.github/workflows/license_review.yml
@@ -21,3 +21,4 @@ jobs:
       - name: Run license finder
         run: license_finder
         working-directory: ${{env.working-directory}}
+        # read the readme
