--- a/.github/workflows/license_review.yml
+++ b/.github/workflows/license_review.yml
@@ -21,4 +21,6 @@ jobs:
       - name: Run license finder
         run: license_finder
         working-directory: ${{env.working-directory}}
-        # read the readme
+      - name: Dependecies need approval
+        if: ${{ failure() }}
+        run: echo See ./tools/license-finder/README.md for instructions on approving a dependency
