add comment to top

--- a/.github/workflows/license_review.yml
+++ b/.github/workflows/license_review.yml
@@ -1,3 +1,4 @@
+# If job fails, see ./tools/license-finder for instructions on approving a dependency.
 name: license_review
 on:
   pull_request:
@@ -23,5 +24,3 @@ jobs:
           echo 'See ./tools/license-finder for instructions on approving a dependency'
           license_finder
         working-directory: ${{env.working-directory}}
-        # if: ${{ failure() }}
-        # run: See ./tools/license-finder/README for instructions on approving a dependency
